Use latest baseline of the registry when running test in github action

--- a/.github/workflows/test-ports.yml
+++ b/.github/workflows/test-ports.yml
@@ -44,19 +44,17 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libltdl-dev libx11-dev libxft-dev libxext-dev
         if: runner.os == 'Linux'
 
+      - name: Update vcpkg-configuration.json baseline to always use latest
+        run: |
+          LATEST_BASELINE=$(git ls-remote https://github.com/mwthinker/mw-vcpkg-registry.git HEAD | awk '{print $1}')
+          sed -i.bak -E '/"repository": "https:\/\/github.com\/mwthinker\/mw-vcpkg-registry.git"/{N;s/("repository": "https:\/\/github.com\/mwthinker\/mw-vcpkg-registry.git",\n[[:space:]]*"baseline": ")[a-f0-9]+(")/\1'"$LATEST_BASELINE"'\2/;}' test/vcpkg-configuration.json
+
       - name: Run CMake
         shell: bash
         run: |
           cd test
           cmake --preset=${{ matrix.preset }} -B build_debug -DCMAKE_VERBOSE_MAKEFILE=1 -DCMAKE_BUILD_TYPE=Debug
           cmake --preset=${{ matrix.preset }} -B build_release -DCMAKE_VERBOSE_MAKEFILE=1 -DCMAKE_BUILD_TYPE=Release
-
-      - name: Print log message on macOS
-        shell: bash
-        run: |
-          cd test
-          cat /Users/runner/work/CppSdl3/CppSdl3/vcpkg/buildtrees/sdl3/install-x64-osx-dbg-out.log
-        if: runner.os == 'macOS'
 
       - name: Compile binaries
         shell: bash
@@ -69,14 +67,14 @@ jobs:
         shell: bash
         run: |
           cd test
-          ./build_debug/CppSdl3_Test
-          ./build_release/CppSdl3_Test
+          ./build_debug/TestProject
+          ./build_release/TestProject
         if: runner.os == 'Linux' || runner.os == 'macOS'
 
       - name: Run binary on Windows
         shell: bash
         run: |
           cd test
-          .\build_debug\CppSdl3_Test.exe
-          .\build_release\CppSdl3_Test.exe
+          .\build_debug\TestProject.exe
+          .\build_release\TestProject.exe
         if: runner.os == 'Windows'
