Fix windows github action

--- a/.github/workflows/test-ports.yml
+++ b/.github/workflows/test-ports.yml
@@ -55,12 +55,21 @@ jobs:
           cmake --preset=${{ matrix.preset }} -B build_debug -DCMAKE_VERBOSE_MAKEFILE=1 -DCMAKE_BUILD_TYPE=Debug
           cmake --preset=${{ matrix.preset }} -B build_release -DCMAKE_VERBOSE_MAKEFILE=1 -DCMAKE_BUILD_TYPE=Release
 
-      - name: Compile binaries
+      - name: Compile binaries on Linux/macOS
         shell: bash
         run: |
           cd test
           cmake --build build_debug
           cmake --build build_release
+        if: runner.os == 'Linux' || runner.os == 'macOS'
+
+      - name: Compile binaries on Windows
+        shell: bash
+        run: |
+          cd test
+          cmake --build build_debug --config Debug
+          cmake --build build_release --config Release
+        if: runner.os == 'Windows'
 
       - name: Run binary
         shell: bash
@@ -74,6 +83,6 @@ jobs:
         shell: bash
         run: |
           cd test
-          ./build_debug/TestProject.exe
-          ./build_release/TestProject.exe
+          ./build_debug/Debug/TestProject.exe
+          ./build_release/Release/TestProject.exe
         if: runner.os == 'Windows'
